Fix layout breaking on resize

--- a/app/components/App.scss
+++ b/app/components/App.scss
@@ -5,6 +5,12 @@ body {
   background-color: $background-color;
 }
 
+.split {
+  .grommetux-split__column--flex {
+    width: 100%;
+  }
+}
+
 ::-webkit-scrollbar {
   width: 12px;
 }
